styles for birthday card

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 </head>
 
 <body>
+
+	<input type="checkbox" id="sidebar-toggle">
 	<div class="sidebar">
 		<div class="sidebar-header">
 			<h3 class="brand">
 				<span class="ti-unlink"></span>
 				<span>easywire</span>
 			</h3>
-			<span class="ti-menu-alt"></span>
+			<label for="sidebar-toggle" class="ti-menu-alt"></label>
 		</div>
 		<div class="sidebar-menu">
 			<ul>
@@ -256,16 +258,18 @@
 						</div>
 
 						<div class="bday-card">
-							<div class="dbay-img"></div>
-							<div class="bday-info">
-								<h5>Dwayne F. Sanders</h5>
-								<small>Birthday Today</small>
-								<div>
-									<button>
-										<span class="ti-gift"></span>
-										Wish him
-									</button>
+							<div class="bday-flex">
+								<div class="bday-img"></div>
+								<div class="bday-info">
+									<h5>Dwayne F. Sanders</h5>
+									<small>Birthday Today</small>
 								</div>
+							</div>
+							<div class="text-center">
+								<button>
+									<span class="ti-gift"></span>
+									Wish him
+								</button>
 							</div>
 
 						</div>
