--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,700;1,100;1,400;1,500&display=swap"
@@ -152,84 +152,86 @@
 				<div class="activity-grid">
 					<div class="activity-card">
 						<h3>Recent activity</h3>
-						<table>
-							<thead>
-								<tr>
-									<th>Project</th>
-									<th>Start Date</th>
-									<th>End Date</th>
-									<th>Team</th>
-									<th>Status</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>App Development</td>
-									<td>15 Aug, 2020</td>
-									<td>22 Aug, 2020</td>
-									<td class="td-team">
-										<div class="img-1"></div>
-										<div class="img-2"></div>
-										<div class="img-3"></div>
-									</td>
-									<td>
-										<span class="badge success">Success</span>
-									</td>
-								</tr>
-								<tr>
-									<td>Web Development</td>
-									<td>15 Aug, 2020</td>
-									<td>22 Aug, 2020</td>
-									<td class="td-team">
-										<div class="img-1"></div>
-										<div class="img-2"></div>
-										<div class="img-3"></div>
-									</td>
-									<td>
-										<span class="badge warning">Processing</span>
-									</td>
-								</tr>
-								<tr>
-									<td>Front-end Design</td>
-									<td>15 Aug, 2020</td>
-									<td>22 Aug, 2020</td>
-									<td class="td-team">
-										<div class="img-1"></div>
-										<div class="img-2"></div>
-										<div class="img-3"></div>
-									</td>
-									<td>
-										<span class="badge warning">Processing</span>
-									</td>
-								</tr>
-								<tr>
-									<td>Server Setup </td>
-									<td>15 Aug, 2020</td>
-									<td>22 Aug, 2020</td>
-									<td class="td-team">
-										<div class="img-1"></div>
-										<div class="img-2"></div>
-										<div class="img-3"></div>
-									</td>
-									<td>
-										<span class="badge success">Success</span>
-									</td>
-								</tr>
-								<tr>
-									<td>Logo Design </td>
-									<td>15 Aug, 2020</td>
-									<td>22 Aug, 2020</td>
-									<td class="td-team">
-										<div class="img-1"></div>
-										<div class="img-2"></div>
-										<div class="img-3"></div>
-									</td>
-									<td>
-										<span class="badge success">Success</span>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+						<div class="table-responsive">
+							<table>
+								<thead>
+									<tr>
+										<th>Project</th>
+										<th>Start Date</th>
+										<th>End Date</th>
+										<th>Team</th>
+										<th>Status</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>App Development</td>
+										<td>15 Aug, 2020</td>
+										<td>22 Aug, 2020</td>
+										<td class="td-team">
+											<div class="img-1"></div>
+											<div class="img-2"></div>
+											<div class="img-3"></div>
+										</td>
+										<td>
+											<span class="badge success">Success</span>
+										</td>
+									</tr>
+									<tr>
+										<td>Web Development</td>
+										<td>15 Aug, 2020</td>
+										<td>22 Aug, 2020</td>
+										<td class="td-team">
+											<div class="img-1"></div>
+											<div class="img-2"></div>
+											<div class="img-3"></div>
+										</td>
+										<td>
+											<span class="badge warning">Processing</span>
+										</td>
+									</tr>
+									<tr>
+										<td>Front-end Design</td>
+										<td>15 Aug, 2020</td>
+										<td>22 Aug, 2020</td>
+										<td class="td-team">
+											<div class="img-1"></div>
+											<div class="img-2"></div>
+											<div class="img-3"></div>
+										</td>
+										<td>
+											<span class="badge warning">Processing</span>
+										</td>
+									</tr>
+									<tr>
+										<td>Server Setup </td>
+										<td>15 Aug, 2020</td>
+										<td>22 Aug, 2020</td>
+										<td class="td-team">
+											<div class="img-1"></div>
+											<div class="img-2"></div>
+											<div class="img-3"></div>
+										</td>
+										<td>
+											<span class="badge success">Success</span>
+										</td>
+									</tr>
+									<tr>
+										<td>Logo Design </td>
+										<td>15 Aug, 2020</td>
+										<td>22 Aug, 2020</td>
+										<td class="td-team">
+											<div class="img-1"></div>
+											<div class="img-2"></div>
+											<div class="img-3"></div>
+										</td>
+										<td>
+											<span class="badge success">Success</span>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
 
 					<div class="summary">
